# context-injector

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  install-bd-guard.sh  install-ctx.sh  install-governor.sh  install-guvnah.sh  install-lint.sh  install-terminology-guard.sh  install.sh  parenthood.py  pyproject.toml  run_parenthood.py  trace_experiment.py  tracer.py  uninstall-bd-guard.sh  uninstall-ctx.sh  uninstall-governor.sh  uninstall-guvnah.sh  uninstall-terminology-guard.sh  uninstall.sh
.beads/: issues.jsonl  metadata.json
.claude/: settings.json
commands/: ctx.md  governor.md  lint.md
gates/: __init__.py  base.py  lint.py  reassignment.py  test_quality.py
governor/: __init__.py  __main__.py  audit.py  governor.py  state_io.py
governor_v3/: __init__.py  config.py  engine.py  loader.py  primitives.py
governor_v4/: __init__.py  __main__.py  cli.py  cmd_capture.py  cmd_evaluate.py  cmd_init.py  cmd_prompt.py  config.py  engine.py  gates.py  loader.py  locker.py  primitives.py
hooks/: bd-terminology-guard.sh  governor-hook.sh  post-tool-use.sh  pre-compact.sh  pre-tool-use.sh  session-start-v2.sh  session-start.sh  user-prompt-submit.sh
machines/: __init__.py  base.py  feature_development.py  tdd.json  tdd.py  tdd_cycle.py  tdd_v2.py  tdd_v4.json
precommit-scripts/: scan-history
tests/: conftest.py  test_audit.py  test_audit_cli.py  test_base_machine.py  test_bash_env_hook.py  test_feature_development.py  test_gate_adapters.py  test_gates_base.py  test_governor.py  test_governor_gates.py  test_governor_tdd.py  (+34 more)
(+31 files in other folders)
