[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-injector"
version = "2.0.0"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["governor_v4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
